fix admin layerrights control checkboxes alignment problem

--- a/bundles/framework/admin-layerrights/resources/css/style.css
+++ b/bundles/framework/admin-layerrights/resources/css/style.css
@@ -20,7 +20,7 @@ table.layer-rights-table tr.control {
   border-bottom: thin solid silver; }
   table.layer-rights-table tr.control td {
     width: 25%;
-    min-width: 80px; }
+    min-width: 108px; }
 
 table.layer-rights-table tbody {
   position: relative;
